2012-02-06  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        Provide more attribute methods in Element
        https://bugs.webkit.org/show_bug.cgi?id=77800

        Reviewed by Ryosuke Niwa.

        * Api/qwebelement.cpp:
        (QWebElement::attributeNames): access attributes via Element interface.

2012-02-03  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        [Qt] Don't version QtWebKit.experimental.
        https://bugs.webkit.org/show_bug.cgi?id=77739

        Reviewed by Tor Arne Vestbø.

        We won't support previous versions of the experimental API.

        * declarative/experimental/plugin.cpp:

2012-02-05  Gavin Barraclough  <barraclough@apple.com>

        Remove JSObject defineGetter/defineSetter lookupGetter/lookupSetter
        https://bugs.webkit.org/show_bug.cgi?id=77451

        Reviewed by Sam Weinig.

        These can now all be implemented in terms of defineOwnProperty & getPropertyDescriptor.
        Also remove initializeGetterSetterProperty, since this is equivalent to putDirectAccessor.

        * Api/qwebframe.cpp:
        (QWebFramePrivate::addQtSenderToGlobalObject):

2012-02-03  Antti Koivisto  <antti@apple.com>

        Rename CSSMutableStyleDeclaration.h/.cpp to StylePropertySet.h/.cpp 
        https://bugs.webkit.org/show_bug.cgi?id=77779

        Reviewed by Darin Adler.

        * Api/qwebelement.cpp:

2012-02-03  Antti Koivisto  <antti@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=77740
        Split CSSMutableStyleDeclaration into separate internal and CSSOM types 

        Reviewed by Andreas Kling and Darin Adler.

        * Api/qwebelement.cpp:
        (QWebElement::styleProperty):

2012-02-03  No'am Rosenthal  <noam.rosenthal@nokia.com>

        [Qt][Texmap] Refactor TextureMapper API to use ImageBuffers when possible.
        https://bugs.webkit.org/show_bug.cgi?id=77148

        Reviewed by Martin Robinson.
